--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "Playwright installation\r - 01 - Nodejs\r - 02 - VS Code\r - 03 - Create project folder (ex: playwright_hybrid_framework_nopcommerce)\r - 04 - Install playwright using terminal:\t> npm init playwright@latest\r \t - To check playwright version:\t> npm playwright -v\r \t - package.json: node project management file to manage all dependencies\r \t - playwright.config.js: playwright configuration file\r \t - tests folder: contains all the playright tests \r - 05 - Install Playright VS Code extension: Playwright Test for VSCode",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "debug": "npx playwright test ./tests/basic/APIGetEggsPrice.spec.js --headed"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/TranKiet97/Playwright-Hydrid-Framework.git"
@@ -17,6 +19,10 @@
   "homepage": "https://github.com/TranKiet97/Playwright-Hydrid-Framework#readme",
   "devDependencies": {
     "@playwright/test": "^1.51.1",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^22.13.14"
+  },
+  "dependencies": {
+    "jsdom": "^26.0.0"
   }
 }
