--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,11 @@ node_modules/
 /playwright-report/
 /blob-report/
 /playwright/.cache/
+/downloads/
+
+# Allure
+allure-results/
+allure-report/
+
+# VS Code
+.vscode/
