--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Playwright installation\r - 01 - Nodejs\r - 02 - VS Code\r - 03 - Create project folder (ex: playwright_hybrid_framework_nopcommerce)\r - 04 - Install playwright using terminal:\t> npm init playwright@latest\r \t - To check playwright version:\t> npm playwright -v\r \t - package.json: node project management file to manage all dependencies\r \t - playwright.config.js: playwright configuration file\r \t - tests folder: contains all the playright tests \r - 05 - Install Playright VS Code extension: Playwright Test for VSCode",
   "main": "index.js",
   "scripts": {
+    "pretest": "npx tsc --noEmit && npx eslint ./tests",
     "debug": "npx playwright test ./tests/basic/APIGetEggsPrice.spec.js --headed",
     "chrome test": "npx playwright test ./tests/ui/ --project=chrome",
     "safari test": "npx playwright test ./tests/ui/ --project=safari",
@@ -21,10 +22,14 @@
   },
   "homepage": "https://github.com/TranKiet97/Playwright-Hydrid-Framework#readme",
   "devDependencies": {
+    "@eslint/js": "^9.25.0",
     "@playwright/test": "^1.51.1",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.13.14",
-    "allure-playwright": "^3.2.1"
+    "allure-playwright": "^3.2.1",
+    "eslint": "^9.25.0",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.30.1"
   },
   "dependencies": {
     "exceljs": "^4.4.0",
